[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifl-tools"
version = "0.1.1"
description = "Quick python tools for IFL"
authors = [{name = "Cheney Yan", email = "cheney.yan@gmail.com"}]
license = {text = "MIT License"}
dependencies = [
    "boto3",
    "click",
    "requests",
    "pyyaml",
    "prettytable",
    "tabulate"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/utas-zyan/ifl-tools"
repository = "https://github.com/utas-zyan/ifl-toolse"
documentation = "https://github.com/utas-zyan/ifl-tools"




[project.scripts]
all = "all:cli"
cred_tool = "cred_tool:cli"
diff_secrets = "diff_secrets:compare_secrets"
describe-network-resources = "describe_network_resources:main"


[tool.setuptools]
script-files = ["scripts/ssm", "scripts/get_eks_config"]
